--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -8,31 +8,79 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/dashboard_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:textSize="28sp"
+            android:layout_marginTop="12dp"
+            android:fontFamily="sans-serif-black"
+            android:paddingHorizontal="12dp"
             android:textColor="@color/purple_700"
-            android:textStyle="bold" />
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:typeface="sans" />
         <TextView
             android:id="@+id/dashboard_greetings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="Ready to test your whiz?"
+            android:layout_marginTop="4dp"
+            android:paddingHorizontal="12dp"
+            android:text="@string/dashboard_greetings"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp">
         </FrameLayout>
 
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingHorizontal="12dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/create_quiz"
+                android:layout_width="160dp"
+                android:layout_height="120dp"
+                android:background="@drawable/rounded_square_green"
+                android:backgroundTint="@color/green_500"
+                android:text="@string/btn_create_quiz"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+            <Space
+                android:layout_width="17dp"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/take_quiz"
+                android:layout_width="160dp"
+                android:layout_height="120dp"
+                android:background="@drawable/rounded_square_yellow"
+                android:text="@string/btn_take_quiz"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/title_quizzes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:paddingHorizontal="12dp"
+            android:text="@string/title_schedule"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <!-- Recycler View -->
 
     </LinearLayout>
 
@@ -41,6 +89,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_menu"/>
+        app:menu="@menu/bottom_nav_menu"/>
 
 </RelativeLayout>
