--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,7 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="36dp">
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/man_icon"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="60dp"/>
 
         <TextView
             android:id="@+id/profile_username"
@@ -17,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="@string/hint_username"
-            android:textSize="24sp"
+            android:textSize="28sp"
             android:textStyle="bold"
             android:textAlignment="center"/>
 
@@ -25,18 +34,28 @@
             android:id="@+id/profile_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/hint_email"
             android:textSize="18sp"
             android:textAlignment="center"/>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="120dp"/>
 
-
+        <Button
+            android:id="@+id/btn_edit_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@color/gray"
+            android:text="@string/btn_edit_profile"
+            android:textColor="@color/black"/>
         <Button
             android:id="@+id/btn_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="12dp"
             android:backgroundTint="@color/red"
             android:text="@string/btn_logout" />
 
@@ -49,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_menu"/>
+        app:menu="@menu/bottom_nav_menu"/>
 
 </RelativeLayout>
 
