--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -36,9 +36,9 @@
                 android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/btn_to_webview"
+                android:id="@+id/btn_to_webview_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="270dp"
                 android:layout_marginTop="18dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="4dp"
@@ -62,6 +62,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/dashboard_to_playlist_1"
+                            android:textStyle="bold"
                             android:textSize="20sp"
                             android:textColor="@color/white"/>
 
@@ -73,7 +74,7 @@
                             android:fontFamily="sans-serif-black"
                             android:text="@string/dashboard_to_playlist_2"
                             android:textAllCaps="true"
-                            android:textColor="@color/orange_200"
+                            android:textColor="@color/orange_500"
                             android:textSize="32sp"
                             android:textStyle="bold"
                             android:typeface="monospace" />
@@ -90,18 +91,59 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/title_quizzes"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btn_to_music"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:paddingHorizontal="12dp"
-                android:text="@string/title_schedule"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_height="270dp"
+                android:layout_marginTop="18dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp"
+                app:cardUseCompatPadding="true"
+                android:backgroundTint="@color/orange_500">
 
-            <!-- Recycler View -->
-            <!-- Placeholder for RecyclerView or other components -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="18dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:orientation="vertical"
+                        android:layout_marginLeft="12dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/dashboard_to_playlist_3"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:fontFamily="sans-serif-black"
+                            android:text="@string/dashboard_to_playlist_4"
+                            android:textAllCaps="true"
+                            android:textColor="@color/purple_700"
+                            android:textSize="32sp"
+                            android:textStyle="bold"
+                            android:typeface="monospace" />
+
+                        <ImageView
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:layout_gravity="end"
+                            android:src="@drawable/guy_guitar" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
 
         </LinearLayout>
     </ScrollView>
